# google-sheets-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test.ipynb
mcp_google_sheets/: server.py
mcp_google_sheets/tools/: column_operations.py  fetch_sheet.py
src/: server.py
src/tools/: clean_data.py  column_operations.py  data_operations.py  fetch_sheet.py
tests/: test_fetch_sheet.py
