[project]
name = "google-sheets-mcp"
version = "0.1.0"
description = "A Google Sheets MCP server for data manipulation and analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp>=0.1.0",
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "pandas>=1.3.0",
    "gspread>=5.0.0",
    "google-auth>=2.3.0",
    "typer>=0.4.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
google-sheets-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 